<resources>
    <string name="app_name">MyContacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="save">Save</string>
    <string name="call"/>
    <string name="top_text">Top Text</string>
    <string name="bottom_text"/>
    <string name="hint_phone_num">Add phone number</string>
    <string name="hint_add_name">Add name</string>
    <string name="hint_add_email">Add email</string>
    <string name="contact_name">Contact Name</string>
    <string name="call_btn">Call</string>
    <string name="sms_btn">Message</string>
    <string name="email_btn">Email</string>
    <string name="edit_btn">Edit</string>
    <string name="back_btn">Back</string>
    <string name="del_btn">Delete</string>
    <string name="insert_btn">Add Contact</string>
    <string name="send_btn">Send</string>
    <string name="topic_field">Topic: </string>
    <string name="text_field">Text: </string>
    <string name="send_field">Send to: </string>
    <string name="mobile_num_field">Mobile No: </string>
    <string name="message_field">Message: </string>
    <string-array name="email_type_spinner">
        <item>Main</item>
        <item>Office</item>
        <item>Personal</item>
        <item>Billing</item>
        <item>School</item>
        <item>University</item>
    </string-array>
    <string-array name="phone_type_spinner">
        <item>Mobile</item>
        <item>Fax</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>


    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="title_activity_send_email">SendEmailActivity</string>
    <string name="title_activity_send_sms">SendSmsActivity</string>
</resources>